--- a/client/webapp/src/main/webapp/app/admin/pages/userEdit.html
+++ b/client/webapp/src/main/webapp/app/admin/pages/userEdit.html
@@ -80,7 +80,15 @@
               <p>Type a new password to change the existing account password.</p>
 
               <div class="control-group">
-                <label class="control-label" for="inputPassword">Password*:</label>
+                <label class="control-label" for="inputAuthenticationUserPassword" ng-if="userId === authenticatedUser">Old Password*:</label>
+                <label class="control-label" for="inputAuthenticationUserPassword" ng-if="userId !== authenticatedUser">My Password*:</label>
+                <div class="controls">
+                  <input id="inputAuthenticationUserPassword" name="inputAuthenticationUserPassword" type="password" ng-model="credentials.authenticatedUserPassword" required>
+                </div>
+              </div>
+
+              <div class="control-group">
+                <label class="control-label" for="inputPassword">New Password*:</label>
                 <div class="controls">
                   <input id="inputPassword" name="inputPassword" type="password" ng-model="credentials.password" data-password></input>
                   <p class="text-error" ng-show="updateCredentialsForm.inputPassword.$error.password">Password must have at least 8 characters.</p>
@@ -88,7 +96,7 @@
               </div>
 
               <div class="control-group">
-                <label class="control-label" for="inputPasswordRepeat">Password (repeat)*:</label>
+                <label class="control-label" for="inputPasswordRepeat">New Password (repeat)*:</label>
                 <div class="controls">
                   <input id="inputPasswordRepeat" name="inputPasswordRepeat" type="password" ng-model="credentials.password2" data-password-repeat="credentials.password"></input>
                   <p class="text-error" ng-show="updateCredentialsForm.inputPasswordRepeat.$error.passwordRepeat">Passwords must match.</p>
