--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -67,7 +67,7 @@
 
     <!-- content top pane -->
     <div class="ctn-row ctn-content-top">
-      <div process-diagram="processDiagram" process-diagram-overlay="processDiagramOverlay" on-element-click="handleBpmnElementSelection(id, $event)" selection="filter"></div>
+      <div process-diagram="processDiagram" on-element-click="handleBpmnElementSelection(id, $event)" selection="filter" process-data="processData" provider-component="cockpit.processInstance.diagram.overlay"></div>
     </div>
 
     <!-- content bottom pane -->
