--- a/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
+++ b/client/webapp/src/main/webapp/app/cockpit/pages/process-instance.html
@@ -1,98 +1,101 @@
-<div class="ctn-header">
-  <h1>
-    <i class="icon-type icon-inbox"></i>
-    {{ processDefinition.name || processDefinition.key }}
-    
-    <span title="Process instance id, as it appears in the database">
-      &lt;{{ processInstance.id }}&gt;
-    </span>
+<div class="ctn-fixed-view">
+  <div class="ctn-header">
+    <h1>
+      <i class="icon-type icon-inbox"></i>
+      {{ processDefinition.name || processDefinition.key }}
 
-    <span class="badge badge-warning badge-suspended"
-          ng-show="processInstance.suspended"
-          title="Currently suspended">
-      <i class="icon-suspended white"></i>
-    </span>
-  </h1>
+      <span title="Process instance id, as it appears in the database">
+        &lt;{{ processInstance.id }}&gt;
+      </span>
 
-  <div class="view-pills" id="cockpit.processInstance.view"></div>
-</div>
+      <span class="badge badge-warning badge-suspended"
+            ng-show="processInstance.suspended"
+            title="Currently suspended">
+        <i class="icon-suspended white"></i>
+      </span>
+    </h1>
 
-<div class="ctn-content-container ctn-collapsable-parent">
-
-  <!-- toolbar -->
-  <div class="ctn-toolbar">
-
-    <!-- Toolbar actions are provided by plugins -->
-    <span ng-repeat="tabProvider in processInstanceActions">
-      <view provider="tabProvider" vars="processInstanceVars" />
-    </span>
-
+    <div class="view-pills" id="cockpit.processInstance.view"></div>
   </div>
 
-  <!-- sitebar -->
-  <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
+  <div class="ctn-content-container ctn-collapsable-parent">
 
-    <div class="filters" ng-controller="ProcessInstanceFilterController">
-      <h5>
-        Filter
+    <!-- toolbar -->
+    <div class="ctn-toolbar">
 
-        <button class="btn btn-small btn-link btn-control btn-control-link"
-                help help-text="The activity instance tree with all currently selected activity instances. You may change the selection via (CTRL +) click.">
-          <i class="icon-question-sign"></i>
-        </button>
-      </h5>
+      <!-- Toolbar actions are provided by plugins -->
+      <span ng-repeat="tabProvider in processInstanceActions">
+        <view provider="tabProvider" vars="processInstanceVars" />
+      </span>
 
-      <div class="filter">
-        <button class="btn btn-link btn-mini btn-control"
-                ng-show="filterData.activityInstanceCount"
-                ng-click="clearSelection()">
-          <i class="icon-remove"></i>
-        </button>
+    </div>
 
-        <ng-pluralize count="filterData.activityInstanceCount"
-                    when="{ 'null' : 'Nothing',
-                            '0': 'Nothing',
-                            'one': '1 activity instance',
-                            'other': '{{ filterData.activityInstanceCount }} activity instances'}">
-        </ng-pluralize>
+    <!-- sitebar -->
+    <div class="ctn-column ctn-sitebar ctn-collapsable ctn-scroll" collapsable="left">
 
-        selected
-      </div>
+      <div class="filters" ng-controller="ProcessInstanceFilterController">
+        <h5>
+          Filter
+
+          <button class="btn btn-small btn-link btn-control btn-control-link"
+                  help help-text="The activity instance tree with all currently selected activity instances. You may change the selection via (CTRL +) click.">
+            <i class="icon-question-sign"></i>
+          </button>
+        </h5>
+
+        <div class="filter">
+          <button class="btn btn-link btn-mini btn-control"
+                  ng-show="filterData.activityInstanceCount"
+                  ng-click="clearSelection()">
+            <i class="icon-remove"></i>
+          </button>
+
+          <ng-pluralize count="filterData.activityInstanceCount"
+                      when="{ 'null' : 'Nothing',
+                              '0': 'Nothing',
+                              'one': '1 activity instance',
+                              'other': '{{ filterData.activityInstanceCount }} activity instances'}">
+          </ng-pluralize>
+
+          selected
+        </div>
 
 
-      <div class="filter instance-tree">
-        <div activity-instance-tree="activityInstanceTree"
-             selection="filter"
-             on-element-click="handleActivityInstanceSelection(id, activityId, $event)">
+        <div class="filter instance-tree">
+          <div activity-instance-tree="activityInstanceTree"
+               selection="filter"
+               on-element-click="handleActivityInstanceSelection(id, activityId, $event)">
+          </div>
         </div>
       </div>
+
+      <a class="hide-collapsable pull-right"></a>
     </div>
 
-    <a class="hide-collapsable pull-right"></a>
-  </div>
+    <div class="ctn-column ctn-content ctn-collapsable-parent">
 
-  <div class="ctn-column ctn-content ctn-collapsable-parent">
+      <!-- content top pane -->
+      <div class="ctn-row ctn-content-top">
+        <div process-diagram="processDiagram" on-element-click="handleBpmnElementSelection(id, $event)" selection="filter" process-data="processData" provider-component="cockpit.processInstance.diagram.overlay"></div>
+      </div>
 
-    <!-- content top pane -->
-    <div class="ctn-row ctn-content-top">
-      <div process-diagram="processDiagram" on-element-click="handleBpmnElementSelection(id, $event)" selection="filter" process-data="processData" provider-component="cockpit.processInstance.diagram.overlay"></div>
-    </div>
+      <!-- content bottom pane -->
+      <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
+        <div ng-show="processInstanceTabs.length">
+          <ul class="nav nav-tabs">
+            <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processInstanceTabs">
+              <a href ng-click="selectTab(tabProvider)">{{ tabProvider.label }}</a>
+            </li>
+          </ul>
 
-    <!-- content bottom pane -->
-    <div class="ctn-row ctn-content-bottom ctn-tabbed ctn-collapsable" collapse="bottom">
-      <div ng-show="processInstanceTabs.length">
-        <ul class="nav nav-tabs">
-          <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processInstanceTabs">
-            <a href ng-click="selectTab(tabProvider)">{{ tabProvider.label }}</a>
-          </li>
-        </ul>
-
-        <div class="ctn-tabbed-content ctn-scroll">
-          <view provider="selectedTab" vars="processInstanceVars" />
+          <div class="ctn-tabbed-content ctn-scroll">
+            <view provider="selectedTab" vars="processInstanceVars" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <a class="show-collapsable"></a>
+      <a class="show-collapsable"></a>
+    </div>
   </div>
-</div>
+
+</div><!-- end .ctn-fixed-view -->
