--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -1,7 +1,7 @@
-<div>
+<div class="ctn-view">
 
   <div ng-repeat="dashboardProvider in dashboardProviders" class="dashboard-view">
     <view vars="dashboardVars" provider="dashboardProvider"></view>
   </div>
 
-</div>
+</div><!-- end .ctn-view -->
